welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: '(' expected but identifier found.
	if a=b return 4*a
           ^sumDouble:4: error: illegal start of simple expression
}
^